<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".MainActivity">

    <include
        android:id="@+id/bar"
        layout="@layout/action_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="45dp"
                android:backgroundTint="#292929" />

            <EditText
                android:id="@+id/edtInitialValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerFormat"
                android:layout_marginTop="16dp"
                android:backgroundTint="#292929"
                android:hint="@string/valor_inicial"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/silverlight" />

            <EditText
                android:id="@+id/edtPercentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtInitialValue"
                android:layout_marginTop="16dp"
                android:backgroundTint="#292929"
                android:hint="@string/porcentaje"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/silverlight" />

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtPercentage"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/incremento"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line1"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/decremento"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResult1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line2"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diferencia"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResult4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line4"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resultado_final_de_incremento"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResult2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line3"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resultado_final_de_disminuci_n"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvResult3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <include
        layout="@layout/action_banner_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
